Version 1.6:

(2013-03-07)
 * Fix: the most popular list were never refreshed.
 * Replace the most viewed videos for recently featured 
   (most viewed is deprecated).

(2013-02-26)
 * Save the recording list.
 * Add a button to open the recording dialog.

(2013-02-10)
 * Add the Hebrew translaton, by Genghis Khan <genghiskhan at gmx dot ca>


Version 1.5:

(2012-12-20)
 * Adapt for Youtube changes.


Version 1.4:

(2012-11-30)
 * Add the Greek translation, by dglent
   (http://smplayer.sourceforge.net/forum/viewtopic.php?f=6&t=5837#p9082)

(2012-11-28)
 * Bugfix: there were some missing KB on the downloaded videos.


Version 1.3:

(2012-11-09)
 * Remember position and size.
 * New option for command line: -lang. Allows to select the language.
   Example: smtube -lang ja

(2012-10-11)
 * Show a tooltip with the title of the video.


Version 1.2.1:

(2012-09-17)
 * Add icons for the previous and next buttons.
 * Add some key shortcuts for the buttons (Alt+N, Alt+P, Alt+S, Alt+I).


Version 1.2:

(2012-09-14)
 * Fix url retrieval after Youtube changes.

(2012-06-04)
 * Add gnome-mplayer to the list of players.

(2012-06-01)
 * If a search fails (nothing found): display a box showing the error and then
   fall back to the most popular videos.

(2012-05-05)
 * Move to top of the page after changing the page.
 * Scroll only 1 line with the mouse wheel.

(2012-04-13)
* Hungarian translation.


Version 1.1:

(2012-03-27)
 * Now it's possible to use VLC, Dragon Player and Totem as player.

(2012-03-26)
 * Possibility to select the player (smplayer or mplayer, more can be added
   in the future).

(2012-03-25)
 * Add Portuguese translation.

(2012-03-22)
 * Use its own directory for the config file.

(2012-03-18)
 * Add the Basque translation.

(2012-03-12)
 * Fix a crash that may happen if using some of the Ubuntu themes 
   (Ambiance and Radiance at least).

(2012-03-08)
 * Possibility to build a portable version.


Version 1.0:

(2012-02-24)
 * First version.
